objects/EUR_CRM_Postal_Code_Territory_Mapping__c.object
<CustomObject>
    <description>PR EUR Data Model - Used to map EUR_CRM_Accounts to Territories by Postal Code values on the Account card.</description>
    <fields>
        <fullName>EUR_CRM_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>EUR_CRM_Territory__c</referenceTo>
        <relationshipLabel>Included Postal Codes</relationshipLabel>
        <relationshipName>Postal_Code_Territory_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Postal Code - Territory Mapping (EU)</label>
    <nameField>
        <label>Postal Code - Territory Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Code - Territory Mappings (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Off_Trade_Postal_Code_Territory_Mapping</fullName>
        <active>true</active>
        <label>DE Off Trade Postal Code - Territory Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_On_Trade_Postal_Code_Territory_Mapping</fullName>
        <active>true</active>
        <label>DE On Trade Postal Code - Territory Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_On_Trade_Prestige_Postal_Code_Territory_Mapping</fullName>
        <active>true</active>
        <label>DE On Trade Prestige Postal Code - Territory Mapping</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>